Fix layout issues with header style updates

--- a/src/media/css/forms.styl
+++ b/src/media/css/forms.styl
@@ -144,8 +144,8 @@ label [value]:invalid ~ [reason=invalid] {
 
 .form-grid {
     background: #fff;
-    border: 1px solid $seavan-salt-white;
     border-radius: 10px;
+    box-shadow: 0 1px 1px $seavan-salt-white;
     float: left;
     padding: 3px 5px 18px;  // On desktop we want 18px above and below.
     position: relative;
