--- a/src/media/css/site.styl
+++ b/src/media/css/site.styl
@@ -43,7 +43,7 @@ a {
 }
 
 body {
-    background: $salt-flat-white;
+    background: $seavan-salt-white;
     color: $castle-skull-gray;
     // min-height needed so ff b2g/android can scroll to 0 (bug 872622).
     min-height: 300px;
